Added responsiveness to navigation bar when screen size decreases

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -81,3 +81,24 @@
 .darkNav{
     background: #141414;
 }
+
+@media (max-width: 800px){
+    .navBar{
+        padding: 20px 4%;
+    }
+    .navbar-left ul{
+        display: none;
+    }
+    .navBar img{
+        height: 25px;
+    }
+}
+
+@media (max-width: 500px){
+    .navbar img{
+        height: 20px;
+    }
+    .navbar-right{
+        gap: 10px;
+    }
+}
