--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -86,3 +86,25 @@
     font-weight: 500;
     cursor: pointer;
 }
+
+.loginSpinner{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loginSpinner img{
+    width: 60px;
+}
+
+@media (max-width: 500px) {
+    .login{
+        padding: 15px 5%;
+    }
+    .loginForm{
+        padding: 20px;
+        margin-top: 30px;
+    }
+}
